--- a/app/src/main/res/layout/symptom_layout.xml
+++ b/app/src/main/res/layout/symptom_layout.xml
@@ -10,7 +10,6 @@
     <!-- add RadioGroup which contain the many RadioButton-->
 
     <!-- add button For Submit the Selected item-->
-
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -23,100 +22,106 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="20dp"/>
 
-    <RadioGroup
-        android:id="@+id/groupradio"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="604dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintBottom_toTopOf="@id/submit_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView4">
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintBottom_toTopOf="@id/submit_btn">
 
-        <RadioButton
-            android:id="@+id/radia_id1"
-            android:layout_width="fill_parent"
+        <RadioGroup
+            android:id="@+id/groupradio"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="No New Symptoms"
-            android:textSize="20dp" />
+            android:layout_marginStart="20dp">
 
-        <RadioButton
-            android:id="@+id/radia_id2"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Fever greater than 100.4F (38C)"
-            android:textSize="20dp" />
+            <RadioButton
+                android:id="@+id/radia_id1"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="No New Symptoms"
+                android:textSize="20dp" />
 
-        <RadioButton
-            android:id="@+id/radia_id3"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Chills"
-            android:textSize="20dp" />
+            <RadioButton
+                android:id="@+id/radia_id2"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Fever greater than 100.4F (38C)"
+                android:textSize="20dp" />
 
-        <RadioButton
-            android:id="@+id/radia_id4"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Cough"
-            android:textSize="20dp" />
+            <RadioButton
+                android:id="@+id/radia_id3"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Chills"
+                android:textSize="20dp" />
 
-        <RadioButton
-            android:id="@+id/radia_id5"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Difficulty breathing"
-            android:textSize="20dp" />
+            <RadioButton
+                android:id="@+id/radia_id4"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Cough"
+                android:textSize="20dp" />
 
-        <RadioButton
-            android:id="@+id/radia_id6"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Fatigue"
-            android:textSize="20dp" />
+            <RadioButton
+                android:id="@+id/radia_id5"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Difficulty breathing"
+                android:textSize="20dp" />
 
-        <RadioButton
-            android:id="@+id/radia_id7"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Muscle aches"
-            android:textSize="20dp" />
+            <RadioButton
+                android:id="@+id/radia_id6"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Fatigue"
+                android:textSize="20dp" />
 
-        <RadioButton
-            android:id="@+id/radia_id8"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Congestion or runny nose"
-            android:textSize="20dp" />
+            <RadioButton
+                android:id="@+id/radia_id7"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Muscle aches"
+                android:textSize="20dp" />
 
-        <RadioButton
-            android:id="@+id/radia_id9"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Nausea or vomiting"
-            android:textSize="20dp" />
+            <RadioButton
+                android:id="@+id/radia_id8"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Congestion or runny nose"
+                android:textSize="20dp" />
 
-        <RadioButton
-            android:id="@+id/radia_id10"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Headache"
-            android:textSize="20dp" />
+            <RadioButton
+                android:id="@+id/radia_id9"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Nausea or vomiting"
+                android:textSize="20dp" />
 
-        <RadioButton
-            android:id="@+id/radia_id11"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Loss of taste or smell"
-            android:textSize="20dp" />
+            <RadioButton
+                android:id="@+id/radia_id10"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Headache"
+                android:textSize="20dp" />
 
-        <RadioButton
-            android:id="@+id/radia_id12"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Sore throat"
-            android:textSize="20dp" />
-    </RadioGroup>
+            <RadioButton
+                android:id="@+id/radia_id11"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Loss of taste or smell"
+                android:textSize="20dp" />
+
+            <RadioButton
+                android:id="@+id/radia_id12"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Sore throat"
+                android:textSize="20dp" />
+        </RadioGroup>
+
+    </ScrollView>
+
 
     <!-- add clear button for clear the selected item-->
 
@@ -125,14 +130,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="75dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="72dp"
         android:layout_marginBottom="22dp"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/submit_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/groupradio" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/submit_btn"
@@ -146,7 +149,6 @@
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/back_btn"
-        app:layout_constraintTop_toBottomOf="@id/groupradio" />
+        app:layout_constraintStart_toEndOf="@+id/back_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
