--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -4,26 +4,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Profile">
+    tools:context=".profileEdit">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageButton
-            android:id="@+id/profile_settings_btn"
-            android:spinnerMode="dropdown"
-            android:layout_width="50dp"
+        <Button
+            android:id="@+id/edit_confirm_btn"
+            android:layout_width="100dp"
             android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/ic_sharp_settings_24"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp" />
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="30dp"
+            android:text="Confirm"/>
+
+        <Button
+            android:id="@+id/edit_cancel_btn"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="30dp"
+            android:text="Cancel"/>
 
         <TextView
             android:id="@+id/Maintitle"
-            android:layout_width="wrap_content"
+            android:layout_width="415dp"
             android:layout_height="46dp"
             android:text="Profile"
             android:textAlignment="center"
@@ -52,9 +61,9 @@
             android:text="Bob Daniels"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/name_TV"
+            app:layout_constraintStart_toEndOf="@id/profile_IV"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="30dp"/>
+            android:layout_marginStart="-75dp"/>
 
         <TextView
             android:id="@+id/department_TV"
@@ -63,19 +72,19 @@
             android:text="Department:"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/name_TV"
-            app:layout_constraintTop_toBottomOf="@id/name_TV"
+            app:layout_constraintTop_toTopOf="@id/department_input_ET"
+            app:layout_constraintBottom_toBottomOf="@id/department_input_ET"
             android:layout_marginTop="10dp"/>
 
-        <TextView
-            android:id="@+id/department_input_TV"
+        <EditText
+            android:id="@+id/department_input_ET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Information Technolgy"
             android:textSize="20sp"
             app:layout_constraintTop_toBottomOf="@id/name_input_TV"
-            app:layout_constraintStart_toEndOf="@id/department_TV"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="30dp"/>
+            app:layout_constraintStart_toStartOf="@id/name_input_TV"
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:id="@+id/gender_TV"
@@ -84,20 +93,18 @@
             android:text="Gender:"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@id/name_TV"
-            app:layout_constraintStart_toStartOf="@id/name_TV"
-            app:layout_constraintTop_toBottomOf="@id/department_TV"
+            app:layout_constraintTop_toTopOf="@id/gender_input_Spinner"
+            app:layout_constraintBottom_toBottomOf="@id/gender_input_Spinner"
             android:layout_marginTop="10dp"/>
 
-        <TextView
-            android:id="@+id/gender_input_TV"
+        <Spinner
+            android:id="@+id/gender_input_Spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Male"
             android:textSize="20sp"
-            app:layout_constraintStart_toEndOf="@id/gender_TV"
-            app:layout_constraintTop_toBottomOf="@id/department_input_TV"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="30dp"/>
+            app:layout_constraintStart_toStartOf="@id/department_input_ET"
+            app:layout_constraintTop_toBottomOf="@id/department_input_ET"
+            android:layout_marginTop="10dp"/>
 
         <TextView
             android:id="@+id/name_TV"
@@ -115,21 +122,19 @@
             android:layout_height="wrap_content"
             android:text="Job Title:"
             android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/gender_TV"
-            app:layout_constraintEnd_toEndOf="@id/name_TV"
-            android:layout_marginTop="10dp" />
+            app:layout_constraintTop_toTopOf="@id/job_input_ET"
+            app:layout_constraintBottom_toBottomOf="@id/job_input_ET"
+            app:layout_constraintEnd_toEndOf="@id/name_TV" />
 
-        <TextView
-            android:id="@+id/job_input_TV"
+        <EditText
+            android:id="@+id/job_input_ET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Information Technician"
             android:textSize="20sp"
-            app:layout_constraintStart_toEndOf="@id/job_TV"
-            app:layout_constraintTop_toBottomOf="@id/gender_input_TV"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="30dp"/>
-
+            app:layout_constraintStart_toStartOf="@id/gender_input_Spinner"
+            app:layout_constraintTop_toBottomOf="@id/gender_input_Spinner"
+            android:layout_marginTop="10dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
